--- a/1weeklegacyHC.html
+++ b/1weeklegacyHC.html
@@ -1,7 +1,6 @@
 	 <!--
 	   --
-	   --	Elias Marel - Reykjavik University, Internship at Elkem Island 19.02.13
-	   --	An index page with links to other pages
+	   --	elliheimili 2017
 	   --
 	   -->
 
