--- a/data/ascendantPlot.html
+++ b/data/ascendantPlot.html
@@ -13,6 +13,6 @@
   
 </head>
 <body>
-	<img src="plots\ascendantLadderPlot.png" id="myImage"/>
+	<img src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/1WHClegacy/ascendantLadderPlot.png" id="myImage"/>
 </body>
 </html>
