--- a/desktopindex.html
+++ b/desktopindex.html
@@ -15,7 +15,7 @@
 		<h5>Overall ranking:</h5>
 			
 			<a href = "data\overallPlot.html">
-			<img border = "0" src="data\plots\overallLadderPlot.png" alt = "Overall ranking" width = "40%" ></a>
+			<img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/1WHClegacy/overallLadderPlot.png" alt = "Overall ranking" width = "40%" ></a>
 		
 		<h3>Ranking by ascendancy classes:</h3>
 		
