Changed the rest of the plot html files to link to dropbox for now

--- a/data/assassinPlot.html
+++ b/data/assassinPlot.html
@@ -13,6 +13,6 @@
   
 </head>
 <body>
-	<img src="plots\assassinLadderPlot.png" id="myImage"/>
+	<img src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/1WHClegacy/assassinLadderPlot.png" id="myImage"/>
 </body>
 </html>
