--- a/data/necromancerPlot.html
+++ b/data/necromancerPlot.html
@@ -13,6 +13,6 @@
   
 </head>
 <body>
-	<img src="plots\necromancerLadderPlot.png" id="myImage"/>
+	<img src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/1WHClegacy/necromancerLadderPlot.png" id="myImage"/>
 </body>
 </html>
