--- a/data/occultistPlot.html
+++ b/data/occultistPlot.html
@@ -13,6 +13,6 @@
   
 </head>
 <body>
-	<img src="plots\occultistLadderPlot.png" id="myImage"/>
+	<img src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/1WHClegacy/occultistLadderPlot.png" id="myImage"/>
 </body>
 </html>
