--- a/data/cheiftainPlot.html
+++ b/data/cheiftainPlot.html
@@ -13,6 +13,6 @@
   
 </head>
 <body>
-	<img src="plots\cheiftainLadderPlot.png" id="myImage"/>
+	<img src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/1WHClegacy/chieftainLadderPlot.png" id="myImage"/>
 </body>
 </html>
