--- a/data/deadeyePlot.html
+++ b/data/deadeyePlot.html
@@ -13,6 +13,6 @@
   
 </head>
 <body>
-	<img src="plots\deadeyeLadderPlot.png" id="myImage"/>
+	<img src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/1WHClegacy/deadeyeLadderPlot.png" id="myImage"/>
 </body>
 </html>
