Structure changes to allow more than one ladder at a time

--- a/desktopindex.html
+++ b/desktopindex.html
@@ -15,7 +15,7 @@
 		<h5>Overall ranking:</h5>
 			
 			<a href = "data\overallPlot.html">
-			<img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/1WHClegacy/overallLadderPlot.png" alt = "Overall ranking" width = "40%" ></a>
+			<img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/1WHClegacy/overallLadderPlot.png" alt = "Overall ranking" width = "45%" ></a>
 		
 		<h3>Ranking by ascendancy classes:</h3>
 		
@@ -91,25 +91,25 @@
 		<h5> Base class ladders </h5>
 		
 			<a href = "data\duelistPlot.html">
-			<img border = "0" src="https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/e/e0/Duelist_avatar.png?version=e48b4f0baff6cd614b3679880f17b3bc" alt = "Duelist" width = "5%" ></a>
+			<img border = "0" src="data\images\duelist.png" alt = "Duelist" width = "7%" ></a>
 
 			<a href = "data\shadowPlot.html">
-			<img border = "0" src = "https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/7/76/Shadow_avatar.png?version=5797786788c1ae854ecb0b9afebb150e" alt = "Shadow" width = "5%"></a>
+			<img border = "0" src = "data\images\shadow.png" alt = "Shadow" width = "7%"></a>
 
 			<a href = "data\marauderPlot.html">
-			<img border = "0" src="https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/3/30/Marauder_avatar.png?version=f957e44316315335bcb37a8e181f9f87" alt = "Marauder" width = "5%"></a>
+			<img border = "0" src="data\images\marauder.png" alt = "Marauder" width = "7%"></a>
 			
 			<a href = "data\witchPlot.html">
-			<img border = "0" src="https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/6/67/Witch_avatar.png?version=30775369f25d0a121f553be2af3d3c7e" alt = "Witch" width = "5%" ></a>
+			<img border = "0" src="data\images\witch.png" alt = "Witch" width = "7%" ></a>
 
 			<a href = "data\rangerPlot.html">
-			<img border = "0" src = "https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/4/4b/Ranger_avatar.png?version=82f68a4760238912aad53dac822f60d1" alt = "Ranger" width = "5%"></a>
+			<img border = "0" src = "data\images\ranger.png" alt = "Ranger" width = "7%"></a>
 
 			<a href = "data\templarPlot.html">
-			<img border = "0" src="https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/b/b3/Templar_avatar.png?version=863647d1a7b93d9d25b7dc7ee6c532a3" alt = "templar" width = "5%"></a>
+			<img border = "0" src="data\images\templar.png" alt = "Templar" width = "7%"></a>
 			
 			<a href = "data\scionPlot.html">
-			<img border = "0" src="https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/9/92/Scion_avatar.png?version=48c90ca79ccfba1079d7aebea460e394" alt = "Scion" width = "5%" ></a>
+			<img border = "0" src="data\images\scion.png" alt = "Scion" width = "7%" ></a>
 			
 			
 		<h5> </h5>
