--- a/mobileindex.html
+++ b/mobileindex.html
@@ -87,30 +87,28 @@
 			<a href = "data\ascendantPlot.html">
 			<img border = "0" src="data\images\ascendant.png" alt = "Ascendant" width = "30%" ></a></p>
 			
-		<!--
-		<h5> Unascended </h5>
+		<h5> Base class ladders </h5>
 		
 			<a href = "data\duelistPlot.html">
-			<img border = "0" src="https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/e/e0/Duelist_avatar.png?version=e48b4f0baff6cd614b3679880f17b3bc" alt = "Duelist" width = "15%" ></a>
+			<img border = "0" src="data\images\duelist.png" alt = "Duelist" width = "5%" ></a>
 
 			<a href = "data\shadowPlot.html">
-			<img border = "0" src = "https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/7/76/Shadow_avatar.png?version=5797786788c1ae854ecb0b9afebb150e" alt = "Shadow" width = "15%"></a>
+			<img border = "0" src = "data\images\shadow.png" alt = "Shadow" width = "5%"></a>
 
 			<a href = "data\marauderPlot.html">
-			<img border = "0" src="https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/3/30/Marauder_avatar.png?version=f957e44316315335bcb37a8e181f9f87" alt = "Marauder" width = "15%"></a>
+			<img border = "0" src="data\images\marauder.png" alt = "Marauder" width = "5%"></a>
 			
 			<a href = "data\witchPlot.html">
-			<img border = "0" src="https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/6/67/Witch_avatar.png?version=30775369f25d0a121f553be2af3d3c7e" alt = "Witch" width = "15%" ></a>
+			<img border = "0" src="data\images\witch.png" alt = "Witch" width = "5%" ></a>
 
 			<a href = "data\rangerPlot.html">
-			<img border = "0" src = "https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/4/4b/Ranger_avatar.png?version=82f68a4760238912aad53dac822f60d1" alt = "Ranger" width = "15%"></a>
+			<img border = "0" src = "data\images\ranger.png" alt = "Ranger" width = "5%"></a>
 
 			<a href = "data\templarPlot.html">
-			<img border = "0" src="https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/b/b3/Templar_avatar.png?version=863647d1a7b93d9d25b7dc7ee6c532a3" alt = "templar" width = "15%"></a>
+			<img border = "0" src="" alt = "data\images\templar.png" width = "5%"></a>
 			
 			<a href = "data\scionPlot.html">
-			<img border = "0" src="https://hydra-media.cursecdn.com/pathofexile.gamepedia.com/9/92/Scion_avatar.png?version=48c90ca79ccfba1079d7aebea460e394" alt = "Scion" width = "15%" ></a>
-			-->
+			<img border = "0" src="" alt = "data\images\scion.png" width = "5%" ></a>
 			
 		<h5> </h5>
 			
