--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 	 <!--
 	   --
-	   --	Elias Marel - Reykjavik University, Internship at Elkem Island 19.02.13
-	   --	An index page with links to other pages
+	   --	elliheimili 2017
 	   --
 	   -->
 
 <html>
-<head>
+<body>
 
-<script language="JavaScript">
+<h3>Ladder progress plotted over time, updated every 10 minutes:</h3>
+		
+		<font size="4">(Click the links for specific ladder progress)</font>
+		
+			<p>
+			<a href = "data\1WHClegacy.html">
+			<img border = "0" src="data\images\1WHClegacy.png" alt = "1WHClegacy" width = "20%" ></a>
 
-if (screen.width>=1100)
-{
- window.location="desktopindex.html";
-}
-else
-{
-  window.location="mobileindex.html";
-}
+			<a href = "data\2Hheadhunter.html">
+			<img border = "0" src = "data\images\2Hheadhunter.png" alt = "2Hheadhunter" width = "20%"></a>
 
-</script>
-</head>
+			<a href = "data\2WHCSSFmayhem.html">
+			<img border = "0" src="data\images\2WHCSSFmayhem.png" alt = "2WHCSSFmayhem" width = "20%"></a></p>
+			
+</body>
 
 </html>
