Directory changes and added images for ladder index page

--- a/index.html
+++ b/index.html
@@ -5,22 +5,39 @@
 	   -->
 
 <html>
-<body>
+<body bgcolor = "#A8A8A8">
+<div align = "center">
 
-<h3>Ladder progress plotted over time, updated every 10 minutes:</h3>
+<h2>Ladder progress plotted over time, updated every 10 minutes:</h2>
 		
-		<font size="4">(Click the links for specific ladder progress)</font>
-		
+		<font size="6">(Click the links for specific ladder progress)</font>
+			<!--
 			<p>
-			<a href = "data\1WHClegacy.html">
-			<img border = "0" src="data\images\1WHClegacy.png" alt = "1WHClegacy" width = "20%" ></a>
+			<a href = "1WHClegacy\default.html">1WHClegacy</a>
+			</p>
 
-			<a href = "data\2Hheadhunter.html">
-			<img border = "0" src = "data\images\2Hheadhunter.png" alt = "2Hheadhunter" width = "20%"></a>
+			<p>
+			<a href = "2Hheadhunter\default.html">2Hheadhunter</a>
+			</p>
 
-			<a href = "data\2WHCSSFmayhem.html">
-			<img border = "0" src="data\images\2WHCSSFmayhem.png" alt = "2WHCSSFmayhem" width = "20%"></a></p>
+			<p>
+			<a href = "2WHCSSFmayhem\default.html">2WHCSSFmayhem</a>
+			</p>
+			-->
 			
+			<p>
+			<a href = "1WHClegacy\default.html">
+			<img border = "0" src="..\images\1WHClegacy.png" alt = "1WHClegacy" width = "20%" ></a></p>
+
+			<p>
+			<a href = "2Hheadhunter\default.html">
+			<img border = "0" src = "..\images\2Hheadhunter.png" alt = "2Hheadhunter" width = "20%"></a></p>
+
+			<p>
+			<a href = "2WHCSSFmayhem\default.html">
+			<img border = "0" src="..\images\2WHCSSFmayhem.png" alt = "2WHCSSFmayhem" width = "20%"></a></p>
+			
+</div>
 </body>
 
 </html>
