Fixed links to htmls in mobile/desktop index files

--- a/1WHClegacy/mobileindex.html
+++ b/1WHClegacy/mobileindex.html
@@ -14,7 +14,7 @@
 		
 		<h5> Overall ranking </h5>
 			
-			<a href = "..\overallPlot.html">
+			<a href = "data\overallPlot.html">
 			<img border = "0" src="..\plots\overallLadderPlot.png" alt = "Overall ranking" width = "90%" ></a>
 		
 		<h3>Ranking by ascendancy classes</h3>
@@ -22,92 +22,92 @@
 		<font size="2">(Click the links for class specific ladder progress)</font>
 		
 			<p>
-			<a href = "..\championPlot.html">
+			<a href = "data\championPlot.html">
 			<img border = "0" src="..\images\champion.png" alt = "Champion" width = "30%" ></a>
 
-			<a href = "..\gladiatorPlot.html">
+			<a href = "data\gladiatorPlot.html">
 			<img border = "0" src = "..\images\gladiator.png" alt = "Gladiator" width = "30%"></a>
 
-			<a href = "..\slayerPlot.html">
+			<a href = "data\slayerPlot.html">
 			<img border = "0" src="..\images\slayer.png" alt = "Slayer" width = "30%"></a></p>
 		
 		
 			<p>
-			<a href = "..\assassinPlot.html">
+			<a href = "data\assassinPlot.html">
 			<img border = "0" src="..\images\assassin.png" alt = "Assassin" width = "30%" ></a>
 
-			<a href = "..\tricksterPlot.html">
+			<a href = "data\tricksterPlot.html">
 			<img border = "0" src = "..\images\trickster.png" alt = "Trickster" width = "30%"></a>
 
-			<a href = "..\saboteurPlot.html">
+			<a href = "data\saboteurPlot.html">
 			<img border = "0" src="..\images\saboteur.png" alt = "Saboteur" width = "30%"></a></p>
 
 			<p>
-			<a href = "..\juggernautPlot.html">
+			<a href = "data\juggernautPlot.html">
 			<img border = "0" src="..\images\juggernaut.png" alt = "Juggernaut" width = "30%" ></a>
 
-			<a href = "..\berserkerPlot.html">
+			<a href = "data\berserkerPlot.html">
 			<img border = "0" src = "..\images\berserker.png" alt = "berserker" width = "30%"></a>
 
-			<a href = "..\cheiftainPlot.html">
+			<a href = "data\cheiftainPlot.html">
 			<img border = "0" src="..\images\cheiftain.png" alt = "Cheiftain" width = "30%"></a></p>
 		
 			<p>
-			<a href = "..\elementalistPlot.html">
+			<a href = "data\elementalistPlot.html">
 			<img border = "0" src="..\images\elementalist.png" alt = "Elementalist" width = "30%" ></a>
 
-			<a href = "..\occultistPlot.html">
+			<a href = "data\occultistPlot.html">
 			<img border = "0" src = "..\images\occultist.png" alt = "Occultist" width = "30%"></a>
 
-			<a href = "..\necromancerPlot.html">
+			<a href = "data\necromancerPlot.html">
 			<img border = "0" src="..\images\necromancer.png" alt = "Necromancer" width = "30%"></a></p>
 		
 			<p>
-			<a href = "..\deadeyePlot.html">
+			<a href = "data\deadeyePlot.html">
 			<img border = "0" src="..\images\deadeye.png" alt = "Deadeye" width = "30%" ></a>
 
-			<a href = "..\raiderPlot.html">
+			<a href = "data\raiderPlot.html">
 			<img border = "0" src = "..\images\raider.png" alt = "Raider" width = "30%"></a>
 
-			<a href = "..\pathFinderPlot.html">
+			<a href = "data\pathFinderPlot.html">
 			<img border = "0" src="..\images\pathfinder.png" alt = "Pathfinder" width = "30%"></a></p>
 		
 			<p>
-			<a href = "..\inquisitorPlot.html">
+			<a href = "data\inquisitorPlot.html">
 			<img border = "0" src="..\images\champion.png" alt = "Inquisitor" width = "30%" ></a>
 
-			<a href = "..\hierophantPlot.html">
+			<a href = "data\hierophantPlot.html">
 			<img border = "0" src = "..\images\hierophant.png" alt = "Hierophant" width = "30%"></a>
 
-			<a href = "..\guardianPlot.html">
+			<a href = "data\guardianPlot.html">
 			<img border = "0" src="..\images\guardian.png" alt = "Guardian" width = "30%"></a></p>
 		
 		
 			<p>
-			<a href = "..\ascendantPlot.html">
+			<a href = "data\ascendantPlot.html">
 			<img border = "0" src="..\images\ascendant.png" alt = "Ascendant" width = "30%" ></a></p>
 			
 		<h5> Base class ladders </h5>
 		
-			<a href = "..\duelistPlot.html">
+			<a href = "data\duelistPlot.html">
 			<img border = "0" src="..\images\duelist.png" alt = "Duelist" width = "5%" ></a>
 
-			<a href = "..\shadowPlot.html">
+			<a href = "data\shadowPlot.html">
 			<img border = "0" src = "..\images\shadow.png" alt = "Shadow" width = "5%"></a>
 
-			<a href = "..\marauderPlot.html">
+			<a href = "data\marauderPlot.html">
 			<img border = "0" src="..\images\marauder.png" alt = "Marauder" width = "5%"></a>
 			
-			<a href = "..\witchPlot.html">
+			<a href = "data\witchPlot.html">
 			<img border = "0" src="..\images\witch.png" alt = "Witch" width = "5%" ></a>
 
-			<a href = "..\rangerPlot.html">
+			<a href = "data\rangerPlot.html">
 			<img border = "0" src = "..\images\ranger.png" alt = "Ranger" width = "5%"></a>
 
-			<a href = "..\templarPlot.html">
+			<a href = "data\templarPlot.html">
 			<img border = "0" src="" alt = "..\images\templar.png" width = "5%"></a>
 			
-			<a href = "..\scionPlot.html">
+			<a href = "data\scionPlot.html">
 			<img border = "0" src="" alt = "..\images\scion.png" width = "5%" ></a>
 			
 		<h5> </h5>
