Fixed copy paste error with referencing up in directory

--- a/1WHClegacy/desktopindex.html
+++ b/1WHClegacy/desktopindex.html
@@ -1,6 +1,6 @@
 	 <!--
 	   --
-	   -- Bitchboy race 2k17 -elliheimili_
+	   -- elliheimili
 	   --
 	   -->
 
@@ -88,7 +88,7 @@
 			<img border = "0" src="..\images\ascendant.png" alt = "Ascendant" width = "10%" ></a></p>
 			
 		
-		<h5> Base class ladders </h5>
+		<h3>Base class ladders:</h3>
 		
 			<a href = "data\duelistPlot.html">
 			<img border = "0" src="..\images\duelist.png" alt = "Duelist" width = "7%" ></a>
