Fixed unneccesary ../ reference in index.html

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
 			<p>
 			<a href = "1WHClegacy\default.html">
-			<img border = "0" src="..\images\ladders\1WHClegacy.png" alt = "1WHClegacy" width = "20%" ></a></p>
+			<img border = "0" src="images\ladders\1WHClegacy.png" alt = "1WHClegacy" width = "20%" ></a></p>
 
 			<p>
 			<a href = "2Hheadhunter\default.html">
-			<img border = "0" src = "..\images\ladders\2Hheadhunter.png" alt = "2Hheadhunter" width = "20%"></a></p>
+			<img border = "0" src = "images\ladders\2Hheadhunter.png" alt = "2Hheadhunter" width = "20%"></a></p>
 
 			<p>
 			<a href = "2WHCSSFmayhem\default.html">
-			<img border = "0" src="..\images\ladders\2WHCSSFmayhem.png" alt = "2WHCSSFmayhem" width = "20%"></a></p>
+			<img border = "0" src="images\ladders\2WHCSSFmayhem.png" alt = "2WHCSSFmayhem" width = "20%"></a></p>
 			
 			<p>
 			<a href = "2WHCmayhem\default.html">
-			<img border = "0" src="..\images\ladders\2WHCmayhem.png" alt = "2WHCmayhem" width = "20%"></a></p>
+			<img border = "0" src="images\ladders\2WHCmayhem.png" alt = "2WHCmayhem" width = "20%"></a></p>
 			
 </div>
 </body>
