Fixed index page and added example plot of an active race

--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
 	   -->
 
 <html>
+<head>
+<head/>
 <body bgcolor = "#A8A8A8">
 <div align = "center">
+<font face = "Calibri" size = "8">
 
-<h2>Ladder progress plotted over time, updated every 10 minutes:</h2>
+<h4>Path of Exile ladder progress over time, updated every 10 minutes:</h4>
+
+		<h5>Active race example:</h5>
+
+		<a href = "data\overallPlot.html">
+			<p><img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/1WHClegacy/overallLadderPlot.png" alt = "Overall ranking" width = "35%" ></a><p/>
 		
-		<font size="3">(Click the links for specific ladder progress)</font>
+		<font size="5">(Click the links below for race ladder progress)</font>
 
 			<p>
 			<a href = "1WHClegacy\default.html">
-			<img border = "0" src="images\ladders\1WHClegacy.png" alt = "1WHClegacy" width = "20%" ></a></p>
+			<img border = "0" src="images\ladders\1WHClegacy.png" alt = "wip\default.html" width = "20%" ></a></p>
 
 			<p>
 			<a href = "2Hheadhunter\default.html">
@@ -28,6 +36,8 @@
 			<a href = "2WHCmayhem\default.html">
 			<img border = "0" src="images\ladders\2WHCmayhem.png" alt = "2WHCmayhem" width = "20%"></a></p>
 			
+			<h5> </h5>
+</font>
 </div>
 </body>
 
