small copy/paste fix in index

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 			<p>
 			<a href = "1WHClegacy\default.html">
-			<img border = "0" src="images\ladders\1WHClegacy.png" alt = "wip\default.html" width = "20%" ></a></p>
+			<img border = "0" src="images\ladders\1WHClegacy.png" alt = "1WHClegacy" width = "20%" ></a></p>
 
 			<p>
 			<a href = "2Hheadhunter\default.html">
