Added links to the race ladder forum post on pathofexile.com

--- a/1WHClegacy/desktopindex.html
+++ b/1WHClegacy/desktopindex.html
@@ -111,6 +111,8 @@
 			<a href = "data\scionPlot.html">
 			<img border = "0" src="..\images\scion.png" alt = "Scion" width = "7%" ></a>
 			
+		    <p><font size="4">Event link on pathofexile.com: <a href = "http://www.pathofexile.com/forum/view-thread/1905207">http://www.pathofexile.com/forum/view-thread/1905207</a></font></p>
+			
 			
 		<h5> </h5>
 			
