--- a/1WHClegacy/mobileindex.html
+++ b/1WHClegacy/mobileindex.html
@@ -19,7 +19,7 @@
 		
 		<h3>Ranking by ascendancy classes</h3>
 		
-		<font size="2">(Click the links for class specific ladder progress)</font>
+		<font size="6">(Click the links for class specific ladder progress)</font>
 		
 			<p>
 			<a href = "data\championPlot.html">
@@ -90,25 +90,27 @@
 		<h3>Base class ladders:</h3>
 		
 			<a href = "data\duelistPlot.html">
-			<img border = "0" src="..\images\duelist.png" alt = "Duelist" width = "5%" ></a>
+			<img border = "0" src="..\images\duelist.png" alt = "Duelist" width = "13%" ></a>
 
 			<a href = "data\shadowPlot.html">
-			<img border = "0" src = "..\images\shadow.png" alt = "Shadow" width = "5%"></a>
+			<img border = "0" src = "..\images\shadow.png" alt = "Shadow" width = "13%"></a>
 
 			<a href = "data\marauderPlot.html">
-			<img border = "0" src="..\images\marauder.png" alt = "Marauder" width = "5%"></a>
+			<img border = "0" src="..\images\marauder.png" alt = "Marauder" width = "13%"></a>
 			
 			<a href = "data\witchPlot.html">
-			<img border = "0" src="..\images\witch.png" alt = "Witch" width = "5%" ></a>
+			<img border = "0" src="..\images\witch.png" alt = "Witch" width = "13%" ></a>
 
 			<a href = "data\rangerPlot.html">
-			<img border = "0" src = "..\images\ranger.png" alt = "Ranger" width = "5%"></a>
+			<img border = "0" src = "..\images\ranger.png" alt = "Ranger" width = "13%"></a>
 
 			<a href = "data\templarPlot.html">
-			<img border = "0" src="" alt = "..\images\templar.png" width = "5%"></a>
+			<img border = "0" src="..\images\templar.png" alt = "Witch" width = "13%"></a>
 			
 			<a href = "data\scionPlot.html">
-			<img border = "0" src="" alt = "..\images\scion.png" width = "5%" ></a>
+			<img border = "0" src="..\images\scion.png" alt = "Scion" width = "13%" ></a>
+			
+			<p><font size="6">Event link on pathofexile.com: <a href = "http://www.pathofexile.com/forum/view-thread/1905207">http://www.pathofexile.com/forum/view-thread/1905207</a></font></p>
 			
 		<h5> </h5>
 			
