--- a/2WHCmayhem/desktopindex.html
+++ b/2WHCmayhem/desktopindex.html
@@ -9,13 +9,13 @@
 <body bgcolor = "#A8A8A8">
 <div align = "center">
 	<font face = "Calibri" size = "6">
-		<h3>1 week HC Legacy Ladder progress plots</h3>
+		<h3>2 Week HC Mayhem ladder progress plots</h3>
 		<div align = "center">
 		
 		<h5>Overall ranking:</h5>
 			
 			<a href = "data\overallPlot.html">
-			<img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2WHCmayhem/overallLadderPlot.png" alt = "Overall ranking" width = "45%" ></a>
+			<img border = "0" src="..\plots\overallLadderPlot.png" alt = "Overall ranking" width = "45%" ></a>
 		
 		<h3>Ranking by ascendancy classes:</h3>
 		
@@ -110,6 +110,8 @@
 			
 			<a href = "data\scionPlot.html">
 			<img border = "0" src="..\images\scion.png" alt = "Scion" width = "7%" ></a>
+			
+		    <p><font size="4">Event link on pathofexile.com: <a href = "http://www.pathofexile.com/forum/view-thread/1905243">http://www.pathofexile.com/forum/view-thread/1905243</a></font></p>
 			
 			
 		<h5> </h5>
