Changed the 2Hheadhunter overall plot links

--- a/2Hheadhunter/mobileindex.html
+++ b/2Hheadhunter/mobileindex.html
@@ -15,7 +15,7 @@
 		<h5> Overall ranking </h5>
 			
 			<a href = "data\overallPlot.html">
-			<img border = "0" src="..\plots\overallLadderPlot.png" alt = "Overall ranking" width = "90%" ></a>
+			<img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2Hheadhunter/overallLadderPlot.png" alt = "Overall ranking" width = "90%" ></a>
 		
 		<h3>Ranking by ascendancy classes</h3>
 		
