--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 		<h5>Active race example:</h5>
 
-		<a href = "2Hheadhunter\data\overallPlot.html">
-			<p><img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2Hheadhunter/overallLadderPlot.png" alt = "Overall ranking" width = "35%" ></a><p/>
+		<a href = "8Hgrief\data\overallPlot.html">
+			<p><img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/8Hgrief/overallLadderPlot.png" alt = "Overall ranking" width = "35%" ></a><p/>
 		
 		<font size="5">(Click the links below for race ladder progress)</font>
 
@@ -28,6 +28,10 @@
 			<a href = "2Hheadhunter\default.html">
 			<img border = "0" src = "images\ladders\2Hheadhunter.png" alt = "2Hheadhunter" width = "20%"></a></p>
 
+			<p>
+			<a href = "8Hgrief\default.html">
+			<img border = "0" src="images\ladders\8Hgrief.png" alt = "8Hgrief" width = "18%" ></a></p>
+			
 			<p>
 			<a href = "2WHCSSFmayhem\default.html">
 			<img border = "0" src="images\ladders\2WHCSSFmayhem.png" alt = "2WHCSSFmayhem" width = "23%"></a></p>
