Added a favicon for testing

--- a/8Hgrief/mobileindex.html
+++ b/8Hgrief/mobileindex.html
@@ -6,6 +6,10 @@
 
 <html>
 
+<head>
+<link rel="icon" href="images\favicon.png">
+</head>
+
 <body bgcolor = "#A8A8A8">
 <div align = "center">
 	<font face = "Calibri" size = "12">
