--- a/2Hheadhunter/desktopindex.html
+++ b/2Hheadhunter/desktopindex.html
@@ -1,10 +1,15 @@
-	 <!--
-	   --
-	   -- elliheimili
-	   --
-	   -->
+	 <!-----------------------------
+	   --						  --
+	   --	 elliheimili 2017     --
+	   --					      --
+	   ----------------------------->
 
 <html>
+
+<head>
+	<link rel="icon" href="..\images\favicon.png">
+
+</head>
 
 <body bgcolor = "#A8A8A8">
 <div align = "center">
