--- a/2WHCmayhem/data/elementalistPlot.html
+++ b/2WHCmayhem/data/elementalistPlot.html
@@ -6,11 +6,9 @@
 
 <html>
 <head>
-
-  <meta http-equiv="refresh" content="300" > 
-
-  <style>img{ height: 100%; float: left; }</style>
-  
+	<link rel="icon" href="..\..\images\favicon.png">
+	<meta http-equiv="refresh" content="300" > 
+	<style>img{ height: 100%; float: left; }</style>
 </head>
 <body>
 	<img src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2WHCmayhem/elementalistLadderPlot.png" id="myImage"/>
