--- a/1WHClegacy/desktopindex.html
+++ b/1WHClegacy/desktopindex.html
@@ -1,8 +1,8 @@
-	 <!--
-	   --
-	   -- elliheimili
-	   --
-	   -->
+	 <!-----------------------------
+	   --						  --
+	   --	 elliheimili 2017     --
+	   --					      --
+	   ----------------------------->
 
 <html>
 
