--- a/2WHCSSFmayhem/default.html
+++ b/2WHCSSFmayhem/default.html
@@ -1,11 +1,15 @@
-	 <!--
-	   --
-	   --	elliheimili 2017
-	   --
-	   -->
+	 <!-----------------------------
+	   --						  --
+	   --	 elliheimili 2017     --
+	   --					      --
+	   ----------------------------->
 
 <html>
 <head>
+
+
+<link rel="icon" href="..\images\favicon.png">
+
 
 <script language="JavaScript">
 
