--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-	 <!--
-	   --
-	   --	elliheimili 2017
-	   --
-	   -->
+	 <!-----------------------------
+	   --						  --
+	   --	 elliheimili 2017     --
+	   --					      --
+	   ----------------------------->
 
 <html>
 <head>
