fixing active race example

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<h5>Active race example:</h5>
 
-		<a href = "8Hgrief\data\overallPlot.html">
+		<a href = "2WHCSSFmayhem\data\overallPlot.html">
 			<p><img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2WHCSSFmayhem/overallLadderPlot.png" alt = "Overall ranking" width = "35%" ></a><p/>
 		
 		<font size="5">(Click the links below for race ladder progress)</font>
