--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body bgcolor = "#A8A8A8">
 <div align = "center">
-<font face = "Calibri" size = "4">
+<font face = "Calibri" size = "6">
 
-<h4>Path of Exile ladder progress over time, updated every 10 minutes:</h4>
+<h2>Path of Exile ladder progress over time</h4>
 
 		<h5>Active race example:</h5>
 
 		<a href = "2WHCSSFmayhem\data\overallPlot.html">
 			<p><img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2WHCSSFmayhem/overallLadderPlot.png" alt = "Overall ranking" width = "35%" ></a><p/>
 		
-		<font size="5">(Click the links below for race ladder progress)</font>
+		<font size="3">(Click the links below for race ladder progress)</font>
 
 			<p>
 			<a href = "2WHCSSFmayhem\default.html">
