Added mayhem SC and fixed the links to forum posts

--- a/2WHCSSFmayhem/mobileindex.html
+++ b/2WHCSSFmayhem/mobileindex.html
@@ -114,7 +114,7 @@
 			<a href = "data\scionPlot.html">
 			<img border = "0" src="..\images\scion.png" alt = "Scion" width = "13%" ></a>
 			
-			<p><font size="6">Event link on pathofexile.com: <a href = "http://www.pathofexile.com/forum/view-thread/1905243">http://www.pathofexile.com/forum/view-thread/1905243</a></font></p>
+			<p><font size="6">Event link on pathofexile.com: <a href = "https://www.pathofexile.com/forum/view-thread/1913422">https://www.pathofexile.com/forum/view-thread/1913422</a></font></p>
 			
 		<h5> </h5>
 			
