--- a/2Wmayhem/mobileindex.html
+++ b/2Wmayhem/mobileindex.html
@@ -13,13 +13,13 @@
 <body bgcolor = "#A8A8A8">
 <div align = "center">
 	<font face = "Calibri" size = "12">
-		<h4>2W HC Mayhem ladder progress </h4>
+		<h4>2W  Mayhem ladder progress </h4>
 		<div align = "center">
 		
 		<h5> Overall ranking </h5>
 			
 			<a href = "data\overallPlot.html">
-			<img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2WHCmayhem/overallLadderPlot.png" alt = "Overall ranking" width = "90%" ></a>
+			<img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2Wmayhem/overallLadderPlot.png" alt = "Overall ranking" width = "90%" ></a>
 		
 		<h3>Ranking by ascendancy classes</h3>
 		
@@ -114,7 +114,7 @@
 			<a href = "data\scionPlot.html">
 			<img border = "0" src="..\images\scion.png" alt = "Scion" width = "13%" ></a>
 			
-			<p><font size="6">Event link on pathofexile.com: <a href = "https://www.pathofexile.com/forum/view-thread/1905243">https://www.pathofexile.com/forum/view-thread/1905243</a></font></p>
+			<p><font size="6">Event link on pathofexile.com: <a href = "https://www.pathofexile.com/forum/view-thread/1905244">https://www.pathofexile.com/forum/view-thread/1905244</a></font></p>
 			
 		<h5> </h5>
 			
