--- a/2WHCmayhem/desktopindex.html
+++ b/2WHCmayhem/desktopindex.html
@@ -115,7 +115,7 @@
 			<a href = "data\scionPlot.html">
 			<img border = "0" src="..\images\scion.png" alt = "Scion" width = "7%" ></a>
 			
-		    <p><font size="4">Event link on pathofexile.com: <a href = "http://www.pathofexile.com/forum/view-thread/1905243">http://www.pathofexile.com/forum/view-thread/1905243</a></font></p>
+		    <p><font size="4">Event link on pathofexile.com: <a href = "https://www.pathofexile.com/forum/view-thread/1905243">https://www.pathofexile.com/forum/view-thread/1905243</a></font></p>
 			
 			
 		<h5> </h5>
