--- a/2Wmayhem/desktopindex.html
+++ b/2Wmayhem/desktopindex.html
@@ -13,13 +13,13 @@
 <body bgcolor = "#A8A8A8">
 <div align = "center">
 	<font face = "Calibri" size = "6">
-		<h3>2 Week HC SSF Mayhem progress plots</h3>
+		<h3>2 Week  Mayhem ladder progress plots</h3>
 		<div align = "center">
 		
 		<h5>Overall ranking:</h5>
 			
 			<a href = "data\overallPlot.html">
-			<img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2WHCSSFmayhem/overallLadderPlot.png" alt = "Overall ranking" width = "45%" ></a>
+			<img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2Wmayhem/overallLadderPlot.png" alt = "Overall ranking" width = "45%" ></a>
 		
 		<h3>Ranking by ascendancy classes:</h3>
 		
@@ -115,7 +115,7 @@
 			<a href = "data\scionPlot.html">
 			<img border = "0" src="..\images\scion.png" alt = "Scion" width = "7%" ></a>
 			
-		    <p><font size="4">Event link on pathofexile.com: <a href = "https://www.pathofexile.com/forum/view-thread/1913422">https://www.pathofexile.com/forum/view-thread/1913422</a></font></p>
+		    <p><font size="4">Event link on pathofexile.com: <a href = "https://www.pathofexile.com/forum/view-thread/1905244">https://www.pathofexile.com/forum/view-thread/1905244</a></font></p>
 			
 			
 		<h5> </h5>
