Added 2WMayhem SC

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 			<img border = "0" src="images\ladders\2WHCmayhem.png" alt = "2WHCmayhem" width = "20%"></a></p>
 			
 			<p>
+			<a href = "2Wmayhem\default.html">
+			<img border = "0" src="images\ladders\2Wmayhem.png" alt = "2Wmayhem" width = "20%"></a></p>
+			
+			<p>
 			<a href = "1WHClegacy\default.html">
 			<img border = "0" src="images\ladders\1WHClegacy.png" alt = "1WHClegacy" width = "20%" ></a></p>
 
