--- a/8Hgrief/desktopindex.html
+++ b/8Hgrief/desktopindex.html
@@ -100,7 +100,7 @@
 			<a href = "data\raiderPlot.html">
 			<img border = "0" src = "..\images\raider.png" alt = "Raider" width = "10%"></a>
 
-			<a href = "data\pathFinderPlot.html">
+			<a href = "data\pathfinderPlot.html">
 			<img border = "0" src="..\images\pathfinder.png" alt = "Pathfinder" width = "10%"></a></p>
 		
 			<p>
