--- a/2WHCmayhem/mobileindex.html
+++ b/2WHCmayhem/mobileindex.html
@@ -73,7 +73,7 @@
 			<a href = "data\raiderPlot.html">
 			<img border = "0" src = "..\images\raider.png" alt = "Raider" width = "30%"></a>
 
-			<a href = "data\pathFinderPlot.html">
+			<a href = "data\pathfinderPlot.html">
 			<img border = "0" src="..\images\pathfinder.png" alt = "Pathfinder" width = "30%"></a></p>
 		
 			<p>
