Fixed inquisitor copy/paster error in all races

--- a/1WHClegacy/mobileindex.html
+++ b/1WHClegacy/mobileindex.html
@@ -19,7 +19,7 @@
 		<h5> Overall ranking </h5>
 			
 			<a href = "data\overallPlot.html">
-			<img border = "0" src="..\plots\overallLadderPlot.png" alt = "Overall ranking" width = "90%" ></a>
+			<img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/1WHClegacy/overallLadderPlot.png" alt = "Overall ranking" width = "90%" ></a>
 		
 		<h3>Ranking by ascendancy classes</h3>
 		
@@ -78,7 +78,7 @@
 		
 			<p>
 			<a href = "data\inquisitorPlot.html">
-			<img border = "0" src="..\images\champion.png" alt = "Inquisitor" width = "30%" ></a>
+			<img border = "0" src="..\images\inquisitor.png" alt = "Inquisitor" width = "30%" ></a>
 
 			<a href = "data\hierophantPlot.html">
 			<img border = "0" src = "..\images\hierophant.png" alt = "Hierophant" width = "30%"></a>
