--- a/2Hheadhunter/desktopindex.html
+++ b/2Hheadhunter/desktopindex.html
@@ -106,7 +106,7 @@
 		
 			<p>
 			<a href = "data\inquisitorPlot.html">
-			<img border = "0" src="..\images\champion.png" alt = "Inquisitor" width = "10%" ></a>
+			<img border = "0" src="..\images\inquisitor.png" alt = "Inquisitor" width = "10%" ></a>
 
 			<a href = "data\hierophantPlot.html">
 			<img border = "0" src = "..\images\hierophant.png" alt = "Hierophant" width = "10%"></a>
