--- a/2Hheadhunter/mobileindex.html
+++ b/2Hheadhunter/mobileindex.html
@@ -106,7 +106,7 @@
 		
 			<p>
 			<a href = "data\inquisitorPlot.html">
-			<img border = "0" src="..\images\champion.png" alt = "Inquisitor" width = "30%" ></a>
+			<img border = "0" src="..\images\inquisitor.png" alt = "Inquisitor" width = "30%" ></a>
 
 			<a href = "data\hierophantPlot.html">
 			<img border = "0" src = "..\images\hierophant.png" alt = "Hierophant" width = "30%"></a>
