--- a/index.html
+++ b/index.html
@@ -6,48 +6,21 @@
 
 <html>
 <head>
-<link rel="icon" href="images\favicon.png">
+
+<link rel="icon" href="..\..\images\favicon.png">
+
+<script language="JavaScript">
+
+if (screen.width>=1100)
+{
+ window.location="desktopindex.html";
+}
+else
+{
+  window.location="mobileindex.html";
+}
+
+</script>
 </head>
-<body bgcolor = "#A8A8A8">
-<div align = "center">
-<font face = "Calibri" size = "6">
-
-<h2>Path of Exile ladder progress over time</h4>
-
-		<h5>Active race example:</h5>
-
-		<a href = "2WHCSSFmayhem\data\overallPlot.html">
-			<p><img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2WHCSSFmayhem/overallLadderPlot.png" alt = "Overall ranking" width = "35%" ></a><p/>
-		
-		<font size="3">(Click the links below for race ladder progress)</font>
-
-			<p>
-			<a href = "2WHCSSFmayhem\default.html">
-			<img border = "0" src="images\ladders\2WHCSSFmayhem.png" alt = "2WHCSSFmayhem" width = "23%"></a></p>
-			
-			<p>
-			<a href = "2WHCmayhem\default.html">
-			<img border = "0" src="images\ladders\2WHCmayhem.png" alt = "2WHCmayhem" width = "20%"></a></p>
-			
-			<p>
-			<a href = "2Wmayhem\default.html">
-			<img border = "0" src="images\ladders\2Wmayhem.png" alt = "2Wmayhem" width = "16%"></a></p>
-			
-			<p>
-			<a href = "1WHClegacy\default.html">
-			<img border = "0" src="images\ladders\1WHClegacy.png" alt = "1WHClegacy" width = "20%" ></a></p>
-
-			<p>
-			<a href = "2Hheadhunter\default.html">
-			<img border = "0" src = "images\ladders\2Hheadhunter.png" alt = "2Hheadhunter" width = "20%"></a></p>
-
-			<p>
-			<a href = "8Hgrief\default.html">
-			<img border = "0" src="images\ladders\8Hgrief.png" alt = "8Hgrief" width = "15%" ></a></p>
-			
-			<h5> </h5>
-</font>
-</div>
-</body>
 
 </html>
