--- a/mobileindex.html
+++ b/mobileindex.html
@@ -16,8 +16,8 @@
 
 		<h5>Active race example:</h5>
 
-		<a href = "2WHCSSFmayhem\data\overallPlot.html">
-			<p><img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2WHCSSFmayhem/overallLadderPlot.png" alt = "Overall ranking" width = "35%" ></a><p/>
+		<a href = "2WHCSSFturmoil\data\overallPlot.html">
+			<p><img border = "0" src="https://dl.dropboxusercontent.com/u/2086034/poeladderplotter/2WHCSSFturmoil/overallLadderPlot.png" alt = "Overall ranking" width = "35%" ></a><p/>
 		
 		<font size="3">(Click the links below for race ladder progress)</font>
 
